[project]
name = "stock-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "mcp[cli]>=1.27.0",
    "mplfinance>=0.12.10b0",
    "pandas>=3.0.2",
    "pykrx>=1.0.51",
    "setuptools>=82.0.1",
    "ta>=0.11.0",
    "yfinance>=1.2.1",
]
